[package]
name = "example-app"
version = "0.1.0"
edition = "2024"

[dependencies]
rgmt-vllm = { path = "../rgmt-vllm" }
rgmt-core = { path = "../rgmt-core" }
rgmt-state = { path = "../rgmt-state" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
image = "0.23"
tracing-subscriber = "0.3"
