[package]
name = "example-app"
version = "0.1.0"
edition = "2024"

[dependencies]
rgmtrv-vllm = { path = "../rgmtrv-vllm" }
rgmtrv-core = { path = "../rgmtrv-core" }
rgmtrv-state = { path = "../rgmtrv-state" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
image = "0.23"
tracing-subscriber = "0.3"
