[package]
name = "rgmt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
image = { version = "0.23", optional = true }
url = "2.5"
reqwest = { version = "0.13", features = ["json"] }
rgmt-imgproc = { path = "../rgmt-imgproc", optional = true }
futures = "0.3"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
json-fixer = "0.1"
async-trait = "0.1"

[features]
default = ["image"]
image = ["dep:image", "dep:rgmt-imgproc"]
