[package]
name = "rgmt-state"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.34.0", features = ["chat-completion", "image"] }
base64 = "0.22.1"
eyre = "0.6.12"
futures = "0.3.32"
image = "0.23"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.0", features = ["v4"] }
strum = "0.26"
strum_macros = "0.26"
indicatif = "0.18"
json-fixer = "0.1"
async-trait = "0.1"

rgmt-imgproc = { path = "../rgmt-imgproc" }
rgmt-vllm = { path = "../rgmt-vllm" }
rgmt-core = { path = "../rgmt-core" }
