[package]
name = "rgmtrv-state"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.34.0", features = ["chat-completion"] }
base64 = "0.22.1"
eyre = "0.6.12"
futures = "0.3.32"
image = { version = "0.23", optional = true }
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.0", features = ["v4"] }
strum = "0.26"
strum_macros = "0.26"
indicatif = "0.18"
json-fixer = "0.1"
async-trait = "0.1"

rgmtrv-imgproc = { path = "../rgmtrv-imgproc", optional = true }
rgmtrv-vllm = { path = "../rgmtrv-vllm" }
rgmtrv-core = { path = "../rgmtrv-core" }

[features]
default = ["image"]
image = [
    "dep:image",
    "dep:rgmtrv-imgproc",
    "async-openai/image",
    "rgmtrv-core/image",
    "rgmtrv-vllm/image"
]
