[package]
name = "rgmtrv-vllm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.34.0", features = ["chat-completion"] }
base64 = "0.22.1"
eyre = "0.6.12"
futures = "0.3.32"
image = { version = "0.23", optional = true }
serde_json = "1.0.149"
rgmtrv-imgproc = { path = "../rgmtrv-imgproc", optional = true }

[features]
default = ["image"]
image = ["dep:image", "dep:rgmtrv-imgproc", "async-openai/image"]
